Made navigator and guide look better, etc.